# first-opengl-program

./: .gitignore  CMakeLists.txt  compile_commands.json
res/model/: portal.glb  portal.gltf  practice.gltf
res/shaders/: Basic.shader  Simple.shader
src/: main.cpp
src/buffer/: IndexBuffer.cpp  IndexBuffer.h  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.h
src/camera/: Camera.cpp  Camera.h
src/graphics/buffer/: IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/graphics/render/: Renderer.cpp  Renderer.h
src/graphics/shader/: Shader.h
src/graphics/texture/: Texture.cpp  Texture.h
src/model/: GltfMesh.cpp  GltfMesh.h  GltfModel.cpp  GltfModel.h
src/render/: Renderer.h
src/shader/: Shader.cpp
src/texture/: Texture.cpp
src/utils/: Macros.cpp  Macros.h
